2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/23_print_new.deca
// Description:
//    Programme print decl class
//
// Resultats: programme correcte syntaxiquement, faux contextuellement
//    
//
// Historique:
//    cree le 20/12/2023
{
    print(new A());
}